<resources>
    <string name="app_name">NSDPAY</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rs">₹</string>

    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_nine">9</string>
    <string name="digit_zero">0</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="setting">Setting</string>
    <string name="ok">Ok</string>
</resources>