<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragment.NumberBoard">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/one_btn"
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:background="@drawable/light_round_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/digit_one"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/sp_20" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/two_btn"
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:background="@drawable/light_round_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/digit_two"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/sp_20" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/three_btn"
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:background="@drawable/light_round_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/digit_three"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/sp_20" />

            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/four_btn"
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:background="@drawable/light_round_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/digit_four"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/sp_20" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/five_btn"
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:background="@drawable/light_round_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/digit_five"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/sp_20" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/six_btn"
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:background="@drawable/light_round_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/digit_six"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/sp_20" />

            </LinearLayout>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/seven_btn"
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:background="@drawable/light_round_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/digit_seven"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/sp_20" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/eight_btn"
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:background="@drawable/light_round_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/digit_eight"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/sp_20" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nine_btn"
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:background="@drawable/light_round_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/digit_nine"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/sp_20" />

            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:background="@drawable/light_round_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/delete_btn"
                    android:layout_width="@dimen/diemen_30dp"
                    android:layout_height="@dimen/diemen_30dp"
                    android:layout_margin="@dimen/passcode_btn_margin"
                    android:contentDescription="@string/clear"
                    android:background="@null"
                    android:padding="@dimen/sp_2"
                    android:hapticFeedbackEnabled="true"
                    app:tint="@color/text_color"
                    android:src="@drawable/ic_clear_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/zero_btn"
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:background="@drawable/light_round_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/digit_zero"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/sp_20" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_gravity="center"
                android:background="@drawable/light_round_bg"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/ok_btn"
                    android:layout_width="@dimen/passcode_btn"
                    android:layout_height="@dimen/passcode_btn"
                    android:layout_gravity="center"
                    android:padding="@dimen/sp_17"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/ok"
                    android:hapticFeedbackEnabled="true"
                    android:src="@drawable/done_icon"
                    app:tint="@color/text_color"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/btn.create"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/light_round_bg"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/create"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/dark_green"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </FrameLayout>
        </TableRow>

    </TableLayout>

</RelativeLayout>